2003-01-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03616] Re: data: URL scheme
	* file.c (loadGeneralFile): check SCM_DATA
		(loadImageBuffer): newBuffer()
	* html.h (SCM_DATA): added
	* indep.c (url_unquote): deleted
		(Str_url_unquote): renamed from Str_form_unquote
				+ is decoded is_form only
	* indep.h (url_unquote): deleted
		(Str_url_unquote): added
		(Str_form_unquote): define by Str_url_unquote
	* main.c (followA): file_unquote
		(cmd_loadURL): file_unquote
	* url.c (DefaultPort): add for data:
		(schemetable): add "data"
		(DefaultFile): SCM_FTPDIR
		(parseURL): scheme copied from current
		(parseURL2): SCM_DATA
			check SCM_FTP, SCM_FTPDIR
		(_parsedURL2Str): add data in scheme_str
			handle SCM_DATA
			SCM_FTPDIR
		(openURL): file_unquote
			handle SCM_DATA

2003-01-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03611] relative URL
	* news.c (openNewsStream): don't skip '/' for nntp:
		(readNewsgroup): cleanup
	* url.c (parseURL): don't copy user & password
		(parseURL2): fix for group, don't copy user & password

2003-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix build warnings
	* url.c (parseURL2): fix comparison between pointer and integer
	* news.c (readNewsgroup): variable `scheme',`group',`list' might be clobbered by `longjmp' or `vfork'

2003-01-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03610] Re: news:<newsgroup>
	* anchor.c (_put_anchor_news): check '<'
		(reAnchorNewsheader): added
	* file.c (loadSomething): Subject: as buffername
		(checkHeader): check buf->document_header
		(loadGeneralFile): reAnchorNewsheader
	* html.h (SCM_NNTP_GROUP): added
	* main.c (main): delete USE_NNTP in switch (newbuf->real_scheme)
		(chkNMIDBuffer): lowercase in url_like_pat
	* news.c (add_news_message): add scheme, group as arg
		(openNewsStream): check SCM_NNTP_GROUP
				check current_news.host
		(readNewsgroup): rewrite to support nntp:,news: extension
	* proto.h (reAnchorNewsheader): added